# Sigeluguanshou

./: .gitignore  AppDelegate.cpp  CHANGELOG_MINE_UPDATES.md  CMakeLists.txt  CODE_IMPROVEMENTS_REPORT.md  Front层显示问题技术分析.md  GameManual.md  GameScene.cpp  GameScene.h  LICENSE  MapLayer.cpp  MapLayer.h  MenuScene.cpp  MenuScene.h  PROJECT_DOCUMENTATION.md  Player.cpp  Player.h  README.md  TECHNICAL_DOCUMENTATION.md  check_resources.bat  main.cpp  process_slime.py  process_zombie.py  setup_project.bat  修复完成说明.md  矿洞L键功能说明.md  矿洞修复总结.md  矿洞地图制作指南.md  矿洞最终版本说明.md  矿洞系统快速参考.md  矿洞系统说明.md  背包系统使用说明.md  装饰物排查指南.md
Classes/: AppDelegate.cpp  BarnScene.cpp  BarnScene.h  BeachScene.cpp  BeachScene.h  BlacksmithUI.cpp  BlacksmithUI.h  DialogueBox.cpp  DialogueBox.h  ElevatorUI.cpp  ElevatorUI.h  EnergyBar.cpp  EnergyBar.h  FarmManager.cpp  FarmManager.h  FarmManager_Accessors.cpp  FarmManager_Accessors_2.cpp  Fish.cpp  Fish.h  FishingLayer.cpp  FishingLayer.h  GameScene.cpp  GameScene.h  HouseScene.cpp  HouseScene.h  InventoryManager.cpp  InventoryManager.h  InventoryUI.cpp  InventoryUI.h  MapLayer.cpp  MapLayer.h  MarketState.cpp  MarketState.h  MarketUI.cpp  MarketUI.h  MenuScene.cpp  MenuScene.h  MineLayer.cpp  MineLayer.h  MineScene.cpp  (+36 more)
Resources/: farm.tmx  farm_tile4.tsx  farm_tile5.tsx  farm_tiles.tsx  farm_tiles2.tsx  farm_tiles3.tsx
proj.android/: build.gradle  settings.gradle
proj.win32/: GameScene.cpp  GameScene.h  MapLayer.cpp  MenuScene.cpp  MenuScene.h  StardewFarm.sln  StardewFarm.vcxproj  StardewFarm.vcxproj.filters  game.rc
原版贴图/: JunimoNoteMobile.json  (+11 more)
(+129 files in other folders)
